# Agent-Eval-Control-Plane

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  container.yml  release.yml  security.yml
deploy/kubernetes/: api.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  secret.example.yaml  workers.yaml
docs/: architecture.md  artifact-integrity.md  authentication.md  aws-bedrock.md  aws-kms-signing.md  cross-region-recovery.md  database.md  demo-transcript.md  distributed-execution.md  distributed-tracing.md  evaluation-methodology.md  evidence-checkpoints.md  evidence-transparency.md  fleet-analytics.md  gcp-kms-signing.md  hardware-scheduling.md  identity-federation.md  kata-sandbox.md  kubernetes.md  langgraph.md  multi-tenancy.md  nemo-guardrails.md  nvidia-nim.md  ollama-evaluation.md  openai-compatible.md  operations.md  plugin-development.md  recovery-verification.md  releases.md  roadmap.md  sdk.md  security.md  tenant-lifecycle.md  tenant-quotas.md  vault-transit-signing.md
examples/: langgraph_runtime.py  sdk_client.py
examples/datasets/: coding_repair.jsonl  ollama_smoke.jsonl
examples/policies/: coding_repair_gate.yaml  ollama_smoke_gate.yaml
examples/suites/: coding_repair.yaml  ollama_smoke.yaml
scripts/: demo.sh  ollama-demo.sh  openai-compatible-demo.sh  package-smoke.sh  postgres.sh  sandbox-demo.sh  sdk-demo.sh  service-demo.sh
src/aecontrol/: __init__.py  agents.py  api.py  auth.py  aws_kms.py  bedrock.py  capacity.py  checkpoints.py  cli.py  compare.py  database.py  datasets.py  dcgm.py  demand.py  engine.py  evaluators.py  federation.py  fleet.py  gate.py  gcp_kms.py  guardrails.py  hardware.py  integrity.py  jobs.py  kubernetes_sandbox.py  langgraph.py  models.py  nim.py  observability.py  ollama.py  openai_compatible.py  placement.py  plugins.py  promotion.py  recovery.py  recovery_drill.py  reports.py  runtime.py  sandbox.py  sdk.py  (+6 more)
(+104 files in other folders)
