[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aecontrol"
version = "0.21.0"
description = "AgentEval Control Plane: deterministic agent evaluation and release gates."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Jeremy Demers" }]
keywords = ["agent-evaluation", "ai-agents", "release-gates", "nvidia", "llmops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  "uvicorn>=0.30,<1",
  "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2,<3",
  "hypothesis>=6.100,<7",
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
aecontrol = "aecontrol.cli:app"

[project.urls]
Homepage = "https://github.com/JeremyDemers/Agent-Eval-Control-Plane"
Documentation = "https://github.com/JeremyDemers/Agent-Eval-Control-Plane#readme"
Issues = "https://github.com/JeremyDemers/Agent-Eval-Control-Plane/issues"
Source = "https://github.com/JeremyDemers/Agent-Eval-Control-Plane"

[tool.hatch.build.targets.wheel]
packages = ["src/aecontrol"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["A", "ARG", "ASYNC", "B", "C4", "DTZ", "E", "F", "I", "N", "PTH", "RUF", "S", "SIM", "UP", "W"]
ignore = ["ARG002", "B008", "E501", "S101", "S105", "S311", "S603"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["aecontrol"]

[tool.pytest.ini_options]
addopts = "--cov=aecontrol --cov-report=term-missing --cov-fail-under=85"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/aecontrol"]
